--- a/application/blog/backend/pom.xml
+++ b/application/blog/backend/pom.xml
@@ -25,7 +25,7 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>kyanite-backend</artifactId>
+  <artifactId>blog-backend</artifactId>
   <version>0.0.2-SNAPSHOT</version>
   <name>Blog Components Project - Backend</name>
   <description>Contains blog backend.</description>
@@ -136,6 +136,12 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-collections4</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>pl.ds.kyanite</groupId>
+      <artifactId>kyanite-backend</artifactId>
+      <version>0.0.2-SNAPSHOT</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 
