--- a/applications/blog/pom.xml
+++ b/applications/blog/pom.xml
@@ -20,7 +20,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>pl.ds.kyanite</groupId>
-        <artifactId>kyanite-application</artifactId>
+        <artifactId>kyanite-applications</artifactId>
         <version>0.0.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
