--- a/applications/extensions/kyanite-richtext/pom.xml
+++ b/applications/extensions/kyanite-richtext/pom.xml
@@ -20,14 +20,14 @@
 
   <parent>
     <groupId>pl.ds.kyanite</groupId>
-    <artifactId>kyanite-application</artifactId>
+    <artifactId>kyanite-applications</artifactId>
     <version>0.0.2-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
   <artifactId>kyanite-richtext</artifactId>
   <version>0.0.2-SNAPSHOT</version>
-  <name>Kyanite Components Project - RTE extensions module</name>
+  <name>Kyanite Components Project - Extensions RTE extensions module</name>
   <description>RTE extensions module</description>
 
   <properties>
