--- a/applications/extensions/kyanite-table-service/pom.xml
+++ b/applications/extensions/kyanite-table-service/pom.xml
@@ -18,7 +18,7 @@
 
   <parent>
     <groupId>pl.ds.kyanite</groupId>
-    <artifactId>kyanite-application</artifactId>
+    <artifactId>kyanite-applications</artifactId>
     <version>0.0.2-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
@@ -26,7 +26,7 @@
 
   <artifactId>kyanite-table-service</artifactId>
   <version>0.0.2-SNAPSHOT</version>
-  <name>Kyanite Components Project - Table Service</name>
+  <name>Kyanite Components Project - Extensions Table Service</name>
   <description>Table Service module</description>
 
   <build>
