--- a/applications/extensions/kyanite-table-view/pom.xml
+++ b/applications/extensions/kyanite-table-view/pom.xml
@@ -18,7 +18,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <groupId>pl.ds.kyanite</groupId>
-    <artifactId>kyanite-application</artifactId>
+    <artifactId>kyanite-applications</artifactId>
     <version>0.0.2-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
@@ -26,7 +26,7 @@
 
   <artifactId>kyanite-table-view</artifactId>
   <version>0.0.2-SNAPSHOT</version>
-  <name>Kyanite Components Project - Table View</name>
+  <name>Kyanite Components Project - Extensions Table View</name>
   <description>Table View module</description>
 
   <properties>
