--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -25,7 +25,7 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>kyanite-application</artifactId>
+  <artifactId>kyanite-applications</artifactId>
   <name>Kyanite Components Project - Application</name>
   <description>Parent for application modules.</description>
   <packaging>pom</packaging>
