--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -33,7 +33,7 @@
   <modules>
     <module>extensions</module>
     <module>common</module>
-    <module>blog</module>
+    <module>blogs</module>
   </modules>
 
   <properties>
