--- a/applications/common/frontend/pom.xml
+++ b/applications/common/frontend/pom.xml
@@ -38,6 +38,10 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.sling</groupId>
+        <artifactId>sling-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
         <version>${frontend-maven-plugin.version}</version>
