library-icon-config-problem split libraryIcon Config and Factory

--- a/distribution/src/main/features/kyanite-project.json
+++ b/distribution/src/main/features/kyanite-project.json
@@ -41,7 +41,7 @@
     "pl.ds.websight.publishing.staticprocessor.PagePublishProcessor": {
       "shorten.paths": true
     },
-    "pl.ds.kyanite.common.components.services.impl.LibraryIconFactoryConfigImpl~mdi": {
+    "pl.ds.kyanite.common.components.services.impl.LibraryIconConfigImpl~mdi": {
       "id": "mdi",
       "label": "Material Design",
       "libraryUrl": "/libs/kyanite/webroot/material-design-icons/css/materialdesignicons@7.2.96.min.css"
