KYAN-71: Introduce experience fragments component

--- a/distribution/src/main/docker/nginx/default.conf
+++ b/distribution/src/main/docker/nginx/default.conf
@@ -15,17 +15,18 @@
 server {
     listen       80;
     index        homepage.html;
+    ssi          on;
 
     location /libs/kyanite/web_root {
         root   /usr/share/nginx/html;
     }
 
     location ~ (.html|/)$ {
-        root   /usr/share/nginx/html/content/bulma/pages;
+        root   /usr/share/nginx/html/content/kyanite/pages;
     }
 
     location / {
-        root   /usr/share/nginx/html/content/bulma;
+        root   /usr/share/nginx/html/content/kyanite;
     }
 
 }
