--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -34,6 +34,7 @@
     <module>extensions</module>
     <module>common</module>
     <module>blogs</module>
+    <module>fragments</module>
   </modules>
 
   <properties>
