--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>pl.ds.kyanite</groupId>
     <artifactId>kyanite</artifactId>
-    <version>0.0.15-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -34,6 +34,7 @@
     <module>extensions</module>
     <module>common</module>
     <module>blogs</module>
+    <module>fragments</module>
   </modules>
 
   <properties>
