--- a/.github/workflows/release-jira.yaml
+++ b/.github/workflows/release-jira.yaml
@@ -12,28 +12,34 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Sync Github and Jira release
+name: Sync Release
 
 on:
   workflow_dispatch:
-  release:
-    types: [ published ]
 
 jobs:
-  jira_release:
-    timeout-minutes: 5
+  prepare-release-notes:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Create Jira Release
-        id: jira-release
-        uses: rodush/github-action-jira-release@v1
+      - uses: actions/checkout@v3
         with:
-          project_id: 10233
-          project_key: "KYAN"
-        env:
-          JIRA_API_USER: ${{ secrets.ATLASSIAN_CLOUD_USER }}
-          JIRA_API_TOKEN: ${{ secrets.ATLASSIAN_CLOUD_APIKEY }}
-          ATLASSIAN_CLOUD_DOMAIN: ${{ secrets.ATLASSIAN_CLOUD_DOMAIN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Find latest tags
+        run: |
+          LATEST_TAG=$(git describe --tags --abbrev=0)
+          echo "LATEST_TAG=${LATEST_TAG}" >> $GITHUB_ENV
+          PREVIOUS_TAG=$(git describe --abbrev=0 --tags ${LATEST_TAG}^)
+          echo "PREVIOUS_TAG=${PREVIOUS_TAG}" >> $GITHUB_ENV
+      - name: Generate release note
+        uses: actions/jira-release-notes@v1.0.1
+        id: markdown_generator
+        with:
+          head: git show-ref ${LATEST_TAG} -s
+          base: git show-ref ${PREVIOUS_TAG} -s
+          jira-code: 'KYAN'
+          jira-host: ${{ secrets.ATLASSIAN_CLOUD_DOMAIN }}
+          jira-username: ${{ secrets.ATLASSIAN_CLOUD_USER }}
+          jira-password: ${{ secrets.ATLASSIAN_CLOUD_APIKEY }}
+          app-name: 'Kyanite'
+      - name: Process the pdf
+        run: echo "The generated pdf was ${{ steps.markdown_generator.outputs.markdown }}"
