--- a/.github/workflows/release-jira.yaml
+++ b/.github/workflows/release-jira.yaml
@@ -24,9 +24,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
       - name: Find latest tags
         run: |
-          git fetch --tags origin
           LATEST_TAG=$(git describe --tags --abbrev=0)
           echo "LATEST_TAG=${LATEST_TAG}" >> $GITHUB_ENV
           PREVIOUS_TAG=$(git describe --abbrev=0 --tags ${LATEST_TAG}^)
