--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -342,6 +342,12 @@
         <version>3.0.0</version>
         <scope>provided</scope>
       </dependency>
+      <dependency>
+        <groupId>pl.ds.websight</groupId>
+        <artifactId>websight-publishing-framework-next</artifactId>
+        <version>2.0.6</version>
+        <scope>provided</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
