--- a/distribution/src/main/features/kyanite-project.json
+++ b/distribution/src/main/features/kyanite-project.json
@@ -25,6 +25,10 @@
       "start-order": "25"
     },
     {
+      "id": "pl.ds.kyanite:kyanite-pages-outlines:${project.version}",
+      "start-order": "25"
+    },
+    {
       "id": "pl.ds.kyanite:kyanite-richtext:${project.version}",
       "start-order": "25"
     }
@@ -49,6 +53,16 @@
       "id": "mdi",
       "label": "Material Design",
       "libraryUrl": "/libs/kyanite/webroot/material-design-icons/css/materialdesignicons@7.2.96.min.css"
+    },
+    "pl.ds.kyanite.page.outline.configuration.impl.PageOutlineConfigImpl~blog-thumbnail": {
+      "name":"blog-thumbnail",
+      "page.template":"/libs/kyanite/blogs/templates/blogarticlepage",
+      "outline.resource.type":"/libs/kyanite/blogs/components/thumbnail"
+    },
+    "pl.ds.kyanite.page.outline.configuration.impl.PageOutlineConfigImpl~blog-card-thumbnail": {
+      "name":"blog-card-thumbnail",
+      "page.template":"/libs/kyanite/blogs/templates/blogarticlepage",
+      "outline.resource.type":"/libs/kyanite/blogs/components/cardthumbnail"
     }
   },
   "content-packages:ARTIFACTS|true": [
