WOS-344 Page outlines - viewer

--- a/applications/extensions/kyanite-pages-outlines/pom.xml
+++ b/applications/extensions/kyanite-pages-outlines/pom.xml
@@ -147,6 +147,12 @@
       <groupId>pl.ds.websight</groupId>
       <artifactId>websight-publishing-framework-next</artifactId>
     </dependency>
+    <dependency>
+      <groupId>pl.ds.kyanite</groupId>
+      <artifactId>kyanite-common-backend</artifactId>
+      <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
 </project>
