--- a/.github/workflows/release-jira.yaml
+++ b/.github/workflows/release-jira.yaml
@@ -15,18 +15,46 @@
 name: Sync Github and Jira release
 
 on:
+  workflow_dispatch:
   release:
-    types: [published]
+    types: [ published ]
 
 jobs:
   create-jira-release:
     runs-on: ubuntu-latest
     steps:
-      - name: create release
-        uses: Rorychan/jira-releases-action@v1
+      - uses: actions/checkout@v3
         with:
-          jira-server: ${{ secrets.ATLASSIAN_CLOUD_DOMAIN }}
-          jira-email: ${{ secrets.ATLASSIAN_CLOUD_USER }}
-          jira-api-token: ${{ secrets.ATLASSIAN_CLOUD_APIKEY }}
-          project-name: "KYAN"
-          release-name: ${{ github.event.release.name }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Find fixed issues
+        run: |
+          PROJECT_NAME="KYAN"
+          LATEST_TAG=$(git describe --tags --abbrev=0)
+          PREVIOUS_TAG=$(git describe --abbrev=0 ${LATEST_TAG}^)
+          COMMITS=$(git log ${PREVIOUS_TAG}..${LATEST_TAG} --pretty=format:"%s" | grep ${PROJECT_NAME})
+          TICKETS=$(echo "$COMMITS" | grep -o '${PROJECT_NAME}\-[0-9]\+' | sort -u | paste -sd "," -)
+          
+          echo "Latest tag: $LATEST_TAG"
+          echo "Previous tag: $LATEST_TAG"
+          echo "Tickets found in commit messages: ${TICKETS}"
+          
+          echo "RELEASE_NAME=${LATEST_VERSION}" >> $GITHUB_ENV
+          echo "TICKETS=${TICKETS}" >> $GITHUB_ENV
+          if [ -z "TICKETS" ]; then
+            echo "HAS_TICKETS=false" >> $GITHUB_ENV
+            echo "No tickets found. JIRA release won't be created."
+          else
+            echo "HAS_TICKETS=true" >> $GITHUB_ENV
+          fi
+
+      - name: create release
+        if: ${{ env.HAS_TICKETS == 'true' }}
+        uses: armona/jira-release-actions@v2.0.6
+        with:
+          create: true
+          email: ${{ secrets.ATLASSIAN_CLOUD_USER }}
+          api_token: ${{ secrets.ATLASSIAN_CLOUD_APIKEY }}
+          subdomain: ${{ secrets.ATLASSIAN_CLOUD_DOMAIN }}
+          jira_project: 10233
+          tickets: ${{ env.TICKETS }}
+          release_name: ${{ env.RELEASE_NAME }}
