--- a/.github/workflows/release-jira.yaml
+++ b/.github/workflows/release-jira.yaml
@@ -29,6 +29,8 @@ jobs:
       - name: Find fixed issues
         run: |
           PROJECT_NAME="KYAN"
+          echo "Project name: $PROJECT_NAME"
+          
           LATEST_TAG=$(git describe --tags --abbrev=0)
           echo "Latest tag: $LATEST_TAG"
           
