--- a/.github/workflows/release-jira.yaml
+++ b/.github/workflows/release-jira.yaml
@@ -26,25 +26,23 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: '0'
       - name: Find fixed issues
         run: |
           PROJECT_NAME="KYAN"
-          echo "Project name: $PROJECT_NAME"
-          
-          echo "Latest tag: $(git describe --tags --abbrev=0)"
           LATEST_TAG=$(git describe --tags --abbrev=0)
-          echo "Latest tag: $LATEST_TAG"
+          echo "Latest tag: ${LATEST_TAG}"
           
           PREVIOUS_TAG=$(git describe --abbrev=0 ${LATEST_TAG}^)
-          echo "Previous tag: $LATEST_TAG"
+          echo "Previous tag: ${PREVIOUS_TAG}"
           
           COMMITS=$(git log ${PREVIOUS_TAG}..${LATEST_TAG} --pretty=format:"%s" | grep ${PROJECT_NAME})
-          TICKETS=$(echo "$COMMITS" | grep -o '${PROJECT_NAME}\-[0-9]\+' | sort -u | paste -sd "," -)
+          TICKETS=$(echo "${COMMITS}" | grep -o '${PROJECT_NAME}\-[0-9]\+' | sort -u | paste -sd "," -)
           echo "Tickets found in commit messages: ${TICKETS}"
           
           echo "RELEASE_NAME=${LATEST_VERSION}" >> $GITHUB_ENV
           echo "TICKETS=${TICKETS}" >> $GITHUB_ENV
-          if [ -z "TICKETS" ]; then
+          if [ -z "${TICKETS}" ]; then
             echo "HAS_TICKETS=false" >> $GITHUB_ENV
             echo "No tickets found. JIRA release won't be created."
           else
