--- a/.github/workflows/release-jira.yaml
+++ b/.github/workflows/release-jira.yaml
@@ -37,7 +37,7 @@ jobs:
           echo "Previous tag: ${PREVIOUS_TAG}"
           
           COMMITS=$(git log ${PREVIOUS_TAG}..${LATEST_TAG} --pretty=format:"%s" | grep ${PROJECT_NAME})
-          TICKETS=$(echo "${COMMITS}" | grep -o '${PROJECT_NAME}\-[0-9]\+' | sort -u | paste -sd "," -)
+          TICKETS=$(echo "${COMMITS}" | grep -o ${PROJECT_NAME}'\-[0-9]\+' | sort -u | paste -sd "," -)
           echo "Tickets found in commit messages: ${TICKETS}"
           
           echo "RELEASE_NAME=${LATEST_VERSION}" >> $GITHUB_ENV
