Automatically create jira release after release the new version

--- a/.github/workflows/release-jira.yaml
+++ b/.github/workflows/release-jira.yaml
@@ -16,8 +16,17 @@ name: Create JIRA release
 
 on:
   workflow_dispatch:
-  release:
-    types: [ published ]
+    inputs:
+      tag:
+        description: "Tag"
+        type: string
+        required: false
+  workflow_call:
+    inputs:
+      tag:
+        description: "Tag"
+        type: string
+        required: false
 
 jobs:
   create-jira-release:
@@ -30,23 +39,30 @@ jobs:
       - name: Prepare release
         run: |
           PROJECT_NAME="KYAN"
-          LATEST_TAG=$(git describe --tags --abbrev=0)
-          echo "Latest tag: ${LATEST_TAG}"
+          RELEASE_NAME_PREFIX=""
           
-          PREVIOUS_TAG=$(git describe --abbrev=0 ${LATEST_TAG}^)
-          echo "Previous tag: ${PREVIOUS_TAG}"
+          if [ -z "${{ inputs.tag }}" ]; then
+            RELEASED_VERSION=$(git describe --tags --abbrev=0)
+          else
+            RELEASED_VERSION=${{ inputs.tag }}
+          fi  
           
-          COMMITS=$(git log ${PREVIOUS_TAG}..${LATEST_TAG} --pretty=format:"%s" | grep ${PROJECT_NAME})
-          TICKETS=$(echo "${COMMITS}" | grep -o ${PROJECT_NAME}'\-[0-9]\+' | sort -u | paste -sd "," -)
+          echo "Released version: ${RELEASED_VERSION}"
+          
+          PREVIOUS_VERSION=$(git describe --abbrev=0 ${RELEASED_VERSION}^)
+          echo "Previous version: ${PREVIOUS_VERSION}"
+          
+          COMMITS=$(git log ${PREVIOUS_VERSION}..${RELEASED_VERSION} --pretty=format:"%s" | grep ${PROJECT_NAME} || true)
+          TICKETS=$(echo "${COMMITS}" | grep -o ${PROJECT_NAME}'\-[0-9]\+' | sort -u | paste -sd "," - || true)
           echo "Tickets found in commit messages: ${TICKETS}"
           
-          echo "RELEASE_NAME=${LATEST_TAG}" >> $GITHUB_ENV
-          echo "TICKETS=${TICKETS}" >> $GITHUB_ENV
-          if [ -z "${TICKETS}" ]; then
+          if [ ! -z "${TICKETS}" ]; then
+            echo "HAS_TICKETS=true" >> $GITHUB_ENV
+            echo "RELEASE_NAME=${RELEASE_NAME_PREFIX}${RELEASED_VERSION}" >> $GITHUB_ENV
+            echo "TICKETS=${TICKETS}" >> $GITHUB_ENV
+          else
             echo "HAS_TICKETS=false" >> $GITHUB_ENV
             echo "No tickets found. JIRA release won't be created."
-          else
-            echo "HAS_TICKETS=true" >> $GITHUB_ENV
           fi
 
       - name: Create release
