--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.base.ref }}
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
       - uses: actions/cache/restore@v3
         with:
           path: ${{ env.MAVEN_CACHE_PATH }}
@@ -86,6 +91,11 @@ jobs:
     steps:
       - name: Clone PR branch
         uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
       - name: Download snapshot references
         uses: actions/download-artifact@v3
         with:
