--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
           path: ${{ env.MAVEN_CACHE_PATH }}
           key: ${{ env.MAVEN_CACHE_VERSION }}-${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
 
-  build-base-branch:
+  build-and-test-visual:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
 
@@ -79,32 +79,15 @@ jobs:
           restore-keys: ${{ env.MAVEN_CACHE_VERSION }}-${{ runner.os }}-maven
       - name: Visual tests - create reference snapshots
         run: mvn --batch-mode clean verify -P e2e-visual-seed
-      - name: Archive snapshot references
-        uses: actions/upload-artifact@v3
-        with:
-          name: snapshot-references
-          path: |
-            ./tests/end-to-end/backstop_data/bitmaps_reference
-          retention-days: 1
+      - name: Temporarily store snapshot references
+        run: cp -R ./tests/end-to-end/backstop_data/bitmaps_reference $HOME/bitmaps_reference
 
-  build-and-test-visual:
-    if: github.event_name == 'pull_request'
-    needs: [build-and-test-functional, build-base-branch]
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Clone PR branch
+      - name: Switch to PR branch
         uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-      - name: Download snapshot references
-        uses: actions/download-artifact@v3
-        with:
-          name: snapshot-references
-          path: ./tests/end-to-end/backstop_data
+      - name: Add snapshot references from base branch to the project
+        run: cp -R $HOME/bitmaps_reference ./tests/end-to-end/backstop_data
+      - name: Remove temporary storage of snapshot references
+        run: rm -r $HOME/bitmaps_reference
       - uses: actions/cache/restore@v3
         with:
           path: ${{ env.MAVEN_CACHE_PATH }}
