WOS-570 carousel - display in one row and add swipe gesture

--- a/applications/common/frontend/package.json
+++ b/applications/common/frontend/package.json
@@ -73,6 +73,7 @@
     "> 1%"
   ],
   "dependencies": {
+    "@glidejs/glide": "^3.6.0",
     "highlight.js": "^11.8.0",
     "vanilla-cookieconsent": "^2.9.1"
   }
