--- a/tests/end-to-end/pom.xml
+++ b/tests/end-to-end/pom.xml
@@ -326,13 +326,14 @@
             <phase>integration-test</phase>
             <configuration>
               <skip>${e2e.skip.cypress}</skip>
-              <arguments>cypress run test:ci</arguments>
+              <arguments>cypress run test:ci --browser chrome</arguments>
               <environmentVariables>
                 <CYPRESS_baseUrl>http://localhost:${cms.port}</CYPRESS_baseUrl>
                 <CYPRESS_loginUsername>${websight.admin.username}</CYPRESS_loginUsername>
                 <CYPRESS_loginPassword>${websight.admin.password}</CYPRESS_loginPassword>
                 <TERM>xterm</TERM>
                 <CI>1</CI>
+                <DEBUG>cypress:server:util:process_profiler</DEBUG>
               </environmentVariables>
             </configuration>
           </execution>
