KYAN-22: fix frontend local development (localsync)

--- a/environment/local/docker-compose.yml
+++ b/environment/local/docker-compose.yml
@@ -33,6 +33,7 @@ services:
     volumes:
       - kyanite-project_cms_logs:/websight/logs
       - kyanite-project_site_repository:/websight/docroot
+      - ~/.ws-localsync:/ws-localsync
     secrets:
       - source: mongo_password
         target: mongo.password
