[KYAN-22] Add Mega dropdown visual tests

--- a/tests/end-to-end/pom.xml
+++ b/tests/end-to-end/pom.xml
@@ -72,6 +72,8 @@
               <includes>
                 <include>launcher/**</include>
                 <include>coverage.ec</include>
+                <include>backstop_data/html_report/**</include>
+                <include>backstop_data/ci_report/**</include>
               </includes>
             </fileset>
           </filesets>
