--- a/applications/common/frontend/package.json
+++ b/applications/common/frontend/package.json
@@ -76,6 +76,7 @@
     "@glidejs/glide": "^3.6.0",
     "highlight.js": "^11.8.0",
     "typed.js": "^2.1.0",
-    "vanilla-cookieconsent": "^2.9.1"
+    "vanilla-cookieconsent": "^2.9.1",
+    "viewerjs": "^1.11.4"
   }
 }
