--- a/applications/common/frontend/package.json
+++ b/applications/common/frontend/package.json
@@ -77,6 +77,8 @@
     "highlight.js": "^11.8.0",
     "typed.js": "^2.1.0",
     "vanilla-cookieconsent": "^2.9.1",
-    "viewerjs": "^1.11.4"
+    "viewerjs": "^1.11.4",
+    "@algolia/autocomplete-js": "^1.11.0",
+    "@algolia/autocomplete-theme-classic": "^1.11.0"
   }
 }
