fix nginx frontend files location

--- a/distribution/src/main/docker/nginx/default.conf
+++ b/distribution/src/main/docker/nginx/default.conf
@@ -17,7 +17,7 @@ server {
     index        homepage.html;
     ssi          on;
 
-    location /libs/kyanite/web_root {
+    location ~ /libs/kyanite/web\_?root {
         root   /usr/share/nginx/html;
     }
 
