KYAN-183 create kyanite-fragment-api module for EF interface

--- a/distribution/src/main/features/kyanite-project.json
+++ b/distribution/src/main/features/kyanite-project.json
@@ -13,6 +13,10 @@
       "start-order": "25"
     },
     {
+      "id": "pl.ds.kyanite:kyanite-fragments-api:${project.version}",
+      "start-order": "25"
+    },
+    {
       "id": "pl.ds.kyanite:kyanite-fragments-backend:${project.version}",
       "start-order": "25"
     },
@@ -65,4 +69,3 @@
     "pl.ds.kyanite:kyanite-content:zip:${project.version}"
   ]
 }
-  
