--- a/applications/common/backend/pom.xml
+++ b/applications/common/backend/pom.xml
@@ -138,7 +138,7 @@
     </dependency>
     <dependency>
       <groupId>pl.ds.kyanite</groupId>
-      <artifactId>kyanite-fragments-backend</artifactId>
+      <artifactId>kyanite-fragments-api</artifactId>
       <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
