--- a/.github/workflows/update-cms.yml
+++ b/.github/workflows/update-cms.yml
@@ -17,16 +17,24 @@ name: Update CMS version
 on:
   workflow_dispatch:
 
-env:
-  MAVEN_CACHE_VERSION: v7.0.0 # bump cache version number to invalidate cache i.e. v3 > v4
-  MAVEN_CACHE_PATH: ~/.m2/repository
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
   update-cms-version:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v2'
+        with:
+          workload_identity_provider: ${{ secrets.GCP_WEBSIGHT_RELEASES_WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.GCP_WEBSIGHT_RELEASES_RELEASE_DEPLOY_SA }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -54,5 +62,3 @@ jobs:
           else
             echo "CMS version left unchanged"
           fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
