--- a/tests/content/pom.xml
+++ b/tests/content/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>pl.ds.kyanite</groupId>
     <artifactId>kyanite-tests</artifactId>
-    <version>0.7.0-SNAPSHOT</version>
+    <version>0.7.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
