--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,7 +65,7 @@ jobs:
           printf '%s\n' "${{ secrets.SSH_SECRET_KEY }}" > ~/.ssh/id_rsa
           chmod 0600 ~/.ssh/id_rsa
           ls -al ~/.ssh
-          ./mvnw --batch-mode -s release:prepare
+          ./mvnw --batch-mode release:prepare
           RELEASED_VERSION=$(git describe --tags --abbrev=0)
           echo "RELEASED_VERSION=${RELEASED_VERSION}" >> $GITHUB_ENV
           echo "RELEASED_VERSION=${RELEASED_VERSION}" >> $GITHUB_OUTPUT
