KYAN-183 Support for automatically refresh the header and footer on all the published pages when the homepage is published.

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,18 @@
         <enabled>true</enabled>
       </snapshots>
     </repository>
+    <repository>
+      <id>streamx-maven-public-releases</id>
+      <url>
+        artifactregistry://europe-west1-maven.pkg.dev/streamx-releases/streamx-maven-public-releases
+      </url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
   </repositories>
 
   <properties>
