--- a/applications/extensions/pom.xml
+++ b/applications/extensions/pom.xml
@@ -31,13 +31,14 @@
     <description>Parent for extension modules.</description>
     <packaging>pom</packaging>
 
-    <modules>
+  <modules>
     <module>kyanite-table-service</module>
     <module>kyanite-table-view</module>
     <module>kyanite-richtext</module>
-    </modules>
+    <module>kyanite-streamx-support</module>
+  </modules>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 </project>
