--- a/.github/workflows/helper-comment-pr-on-visual-check.yml
+++ b/.github/workflows/helper-comment-pr-on-visual-check.yml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Comment on PR
+name: 'Helper: comment PR with visual tests report'
 
 on:
   workflow_run:
