--- a/.github/workflows/helper-update-cms.yml
+++ b/.github/workflows/helper-update-cms.yml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Update CMS version
+name: 'Helper: Update CMS version'
 
 on:
   workflow_dispatch:
