--- a/.github/workflows/helper-release-jira.yaml
+++ b/.github/workflows/helper-release-jira.yaml
@@ -64,7 +64,7 @@ jobs:
           echo "TICKETS=${TICKETS}" >> $GITHUB_ENV
 
       - name: Create release
-        uses: charpi/jira-release-action@latest
+        uses: armona/jira-release-actions@v2.0.6
         with:
           create: true
           email: ${{ secrets.ATLASSIAN_CLOUD_USER }}
