--- a/.github/workflows/helper-release-jira.yaml
+++ b/.github/workflows/helper-release-jira.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Create JIRA release
+name: 'Helper: Create JIRA release'
 
 on:
   workflow_dispatch:
